packages/components/src/components/tabs/tabs.scss
@use "@db-ux/core-foundations/build/styles/variables";
@use "@db-ux/core-foundations/build/styles/colors";
@use "../../styles/internal/form-components";
@use "../../styles/internal/db-puls";
@use "@db-ux/core-foundations/build/styles/helpers";

$pulse-gap-offset: calc(
	#{variables.$db-border-width-xs} + #{variables.$db-spacing-fixed-2xs}
);

%horizontal-pulse {
	.db-tab-item {
		@include db-puls.set-db-puls-horizontal;

		&::after {
			inset-block-end: calc(
				-1 * #{$pulse-gap-offset}
			) !important; // overrides inset-block shorthand set in _db-puls.scss
		}

		&[aria-selected="true"] {
			@include db-puls.show-db-puls-horizontal;

			&::after {
				inline-size: 100%;
			}
		}
	}
}

%vertical-pulse {
	.db-tab-item {
		@include db-puls.set-db-puls-vertical;

		&::after {
			inset-inline: calc(-1 * var(--db-tabs-line-gap-vertical, 0px)) auto;
			z-index: 5;
		}

		&[aria-selected="true"] {
			@include db-puls.show-db-puls-vertical;

			&::after {
				block-size: 100%;
			}
		}
	}
}

%pulse-track {
	background-color: colors.$db-adaptive-bg-basic-transparent-semi-default;
	content: "";
	border-radius: variables.$db-border-radius-xs;
	position: absolute;
}

.db-tabs {
	$db-tabs-z-index-tab-list: 20;

	@include helpers.display(flex);

	inline-size: 100%;
	position: relative;

	.db-tab-panel {
		padding: variables.$db-spacing-fixed-xs;
		position: relative;
		z-index: 1;
	}

	.db-tab-list {
		position: relative;
		z-index: $db-tabs-z-index-tab-list;

		db-tab-item,
		dbtabitem {
			display: contents;
		}
	}

	&:not([data-orientation="vertical"]) {
		flex-flow: column wrap;

		.db-tab-list {
			padding: calc(
					#{variables.$db-border-width-2xs} +
						#{variables.$db-border-width-xs} * 2
				)
				0 variables.$db-spacing-fixed-2xs;
			margin-block-start: calc(
				-1 *
					(
						#{variables.$db-border-width-2xs} +
							#{variables.$db-border-width-xs} * 2
					)
			);

			@extend %horizontal-pulse;

			background-image: linear-gradient(
				colors.$db-adaptive-bg-basic-transparent-semi-default,
				colors.$db-adaptive-bg-basic-transparent-semi-default
			);
			background-position: left bottom;
			background-repeat: no-repeat;
			background-origin: content-box;
			background-attachment: local;
			background-size: 100% variables.$db-border-width-xs;

			.db-tab-item {
				// stylelint-disable-next-line db-ux/use-spacings
				margin-block-end: $pulse-gap-offset;
			}

			&[role="tablist"],
			.db-tab-list {
				display: flex;
				align-items: stretch;
				overflow: auto;
				// stylelint-disable-next-line db-ux/use-spacings
				padding-inline: calc(
					#{variables.$db-border-width-2xs} +
						#{variables.$db-border-width-xs} * 2
				);
				inline-size: 100%;
			}
		}
	}

	&[data-orientation="vertical"] {
		flex-direction: row;

		.db-tab-list {
			--db-tabs-line-gap-vertical: #{$pulse-gap-offset};

			/*
			min and nominal size must both be set to ensure
			- min-inline-size: tab-list is not displayed narrower than defined
			- max-inline-size: tab-list is not displayed wider than defined
			 */
			min-inline-size: variables.$db-sizing-3xl;
			max-inline-size: variables.$db-sizing-3xl;
			// stylelint-disable-next-line db-ux/use-spacings
			padding-inline: variables.$db-spacing-fixed-xs
				var(--db-tabs-line-gap-vertical);
			margin-block-end: auto;

			@extend %vertical-pulse;

			&::before {
				@extend %pulse-track;

				display: block;
				inset-inline-start: 0;
				inset-block: 0;
				inline-size: variables.$db-border-width-xs;
				z-index: 1;
			}

			&[role="tablist"],
			.db-tab-list {
				display: flex;
				flex-direction: column;
				align-items: flex-start;
			}
		}
	}

	&[data-tab-item-width="full"] {
		.db-tab-list {
			inline-size: 100%;
		}

		.db-tab-item {
			flex: 1 0 0;
			inline-size: 0;
			max-inline-size: none;
			justify-content: flex-start;
		}

		&[data-tab-item-alignment="center"] .db-tab-item {
			text-align: center;
			justify-content: center;
		}

		&[data-tab-item-alignment="end"] .db-tab-item {
			text-align: end;
			justify-content: end;
		}
	}

	&[data-scroll-behavior="arrows"] {
		$db-tabs-z-index-button-background: 21;
		$db-tabs-z-index-button: 22;
		$db-tabs-z-index-track: 19;

		.db-tab-list::-webkit-scrollbar {
			display: none;
		}

		&:not([data-orientation="vertical"]) {
			// Track für Arrow-Buttons-Modus als ::before Pseudo-Element auf .db-tabs
			&::before {
				content: "";
				position: absolute;
				z-index: $db-tabs-z-index-track;
				inset-block-start: calc(
					#{variables.$db-sizing-md} +
						#{variables.$db-border-width-2xs}
				);
				inset-inline: 0;
				block-size: variables.$db-border-width-xs;
				background-color: colors.$db-adaptive-bg-basic-transparent-semi-default;
			}

			// Adjust track width when buttons are hidden
			&:not(:has(.tabs-scroll-start))::before {
				inset-inline-start: variables.$db-sizing-md;
			}

			&:not(:has(.tabs-scroll-end))::before {
				inset-inline-end: variables.$db-sizing-md;
			}

			[data-density="functional"] &::before {
				inset-block-start: calc(
					#{variables.$db-sizing-sm} +
						#{variables.$db-border-width-2xs}
				);
			}

			[data-density="expressive"] &::before {
				inset-block-start: calc(
					#{variables.$db-sizing-lg} +
						#{variables.$db-border-width-2xs}
				);
			}

			.db-tab-list {
				// stylelint-disable-next-line db-ux/use-spacings
				padding: 0 variables.$db-sizing-md $pulse-gap-offset;
				margin-block-start: 0;
				background-image: none;

				.db-tab-item {
					margin-block-end: 0;

					&::after {
						inset-block-end: calc(
							-1 *
								(
									#{variables.$db-spacing-fixed-xs} -
										#{variables.$db-border-width-2xs}
								)
						) !important;
					}
				}
			}

			.tabs-scroll-start,
			.tabs-scroll-end {
				position: absolute;
				z-index: $db-tabs-z-index-button;
				inset-block-start: 0;
				aspect-ratio: unset;
				min-block-size: unset;
				border-block-width: 0;
				padding-block: variables.$db-spacing-fixed-xs
					calc(
						#{variables.$db-spacing-fixed-xs} + #{$pulse-gap-offset}
					);
				align-items: flex-start;
				background-color: colors.$db-adaptive-bg-basic-level-1-default;

				@include helpers.hover {
					background-color: colors.$db-adaptive-bg-basic-level-1-hovered;
				}

				@include helpers.active {
					background-color: colors.$db-adaptive-bg-basic-level-1-pressed;
				}

				@media screen and (forced-colors: active) {
					border-block: variables.$db-border-width-xs solid
						transparent;
					inset-block-start: calc(
						-1 * #{variables.$db-border-width-xs}
					);
				}

				[data-density="functional"] & {
					padding-block: variables.$db-spacing-fixed-2xs
						calc(
							#{variables.$db-spacing-fixed-2xs} +
								#{$pulse-gap-offset}
						);
				}

				[data-density="expressive"] & {
					padding-block: variables.$db-spacing-fixed-sm
						calc(
							#{variables.$db-spacing-fixed-sm} +
								#{$pulse-gap-offset}
						);
				}
			}

			.tabs-scroll-start {
				inset-inline-start: 0;
			}

			.tabs-scroll-end {
				inset-inline-end: 0;
			}
		}
	}
}

